--- a/core/dbio/templates/azuredwh.yaml
+++ b/core/dbio/templates/azuredwh.yaml
@@ -351,7 +351,7 @@ variable:
 native_type_map:
   bigint: bigint
   binary: binary
-  bit: smallint
+  bit: bool
   char: string
   date: date
   datetime: datetime
@@ -381,7 +381,7 @@ native_type_map:
 general_type_map:
   bigint: bigint
   binary: varbinary
-  bool: "varchar(5)"
+  bool: bit
   date: date
   datetime: datetime2
   decimal: "decimal(,)"
