--- a/core/dbio/templates/azuresql.yaml
+++ b/core/dbio/templates/azuresql.yaml
@@ -332,7 +332,7 @@ variable:
 native_type_map:
   bigint: bigint
   binary: binary
-  bit: smallint
+  bit: bool
   char: string
   date: date
   datetime: datetime
@@ -362,7 +362,7 @@ native_type_map:
 general_type_map:
   bigint: bigint
   binary: varbinary
-  bool: "varchar(5)"
+  bool: bit
   date: date
   datetime: datetime2
   decimal: "decimal(,)"
