--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -470,6 +470,7 @@
     SLING_STREAM_CNT=2 MODE=truncate     sling run -r $YAML_EXPR_FILE -d
     SLING_STREAM_CNT=2 MODE=incremental  sling run -r $YAML_EXPR_FILE -d
   streams: 33
+  group: duckdb
   env:
     YAML_FILE: cmd/sling/tests/replications/r.20.chunking.yaml
     YAML_EXPR_FILE: cmd/sling/tests/replications/r.20.chunking.expr.yaml
@@ -685,6 +686,7 @@
   name: Test timestamp to string casting without quotes
   run: sling run -r cmd/sling/tests/replications/r.31.timestamp_string_quotes.yaml --debug
   rows: 3
+  group: duckdb
   output_contains:
     - wrote 3 rows
     - execution succeeded
@@ -917,19 +919,19 @@
     - '✓ Salary field imported correctly'
     - '✓ XML to PostgreSQL import test completed successfully!'
 
-- id: 109
-  name: Test API -- Sling Platform
-  run: sling run -r cmd/sling/tests/replications/apis/r.sling_platform.yaml -d
-  streams: 3
-  output_contains:
-    - 'execution succeeded'
+# - id: 109
+#   name: Test API -- Sling Platform
+#   run: sling run -r cmd/sling/tests/replications/apis/r.sling_platform.yaml -d
+#   streams: 3
+#   output_contains:
+#     - 'execution succeeded'
     
-    # test iterations
-    - '/connection/list?test-value=1'
-    - '/connection/list?test-value=2'
-    - '/connection/list?test-value=3'
-    - '/connection/list?test-value=4'
-    - '/execution/list?filters=%7B%22period'
+#     # test iterations
+#     - '/connection/list?test-value=1'
+#     - '/connection/list?test-value=2'
+#     - '/connection/list?test-value=3'
+#     - '/connection/list?test-value=4'
+#     - '/execution/list?filters=%7B%22period'
 
 - id: 110
   name: Test API -- Sling Stripe
@@ -1101,6 +1103,7 @@
 # Test JSON camelCase to PostgreSQL with column_casing (should only create snake_case columns)
 - id: 129
   name: Test JSON camelCase to PostgreSQL column casing (reproduce duplicate columns bug)
+  after: [117]
   run: 'sling run -d -r cmd/sling/tests/replications/r.67.json_postgres_column_casing.yaml'
   streams: 1
   rows: 3
@@ -1307,7 +1310,7 @@
   name: Test ADBC write
   run: |
     TARGET=POSTGRES_ADBC SCHEMA=public sling run -r cmd/sling/tests/replications/r.79.adbc_write.yaml -d
-    TARGET=SQLSERVER_ADBC SCHEMA=dbo sling run -r cmd/sling/tests/replications/r.79.adbc_write.yaml -d
+    TARGET=MSSQL_ADBC SCHEMA=dbo sling run -r cmd/sling/tests/replications/r.79.adbc_write.yaml -d
   output_contains:
     - 'ADBC write test completed successfully'
     - 'inserted 3 rows'
@@ -1317,7 +1320,7 @@
   name: Test ADBC write large
   run: |
     # TARGET=POSTGRES_ADBC SCHEMA=public sling run -r cmd/sling/tests/replications/r.80.adbc_write_large.yaml -d
-    TARGET=SQLSERVER_ADBC SCHEMA=dbo sling run -r cmd/sling/tests/replications/r.80.adbc_write_large.yaml -d
+    TARGET=MSSQL_ADBC SCHEMA=dbo sling run -r cmd/sling/tests/replications/r.80.adbc_write_large.yaml -d
     # TARGET=MYSQL_ADBC SCHEMA=mysql sling run -r cmd/sling/tests/replications/r.80.adbc_write_large.yaml -d
   output_contains:
     - 'ADBC write large test completed successfully'
