--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -1348,6 +1348,14 @@
     - 'SUCCESS: Boolean values correctly cast to string in bool_test2'
     - 'SUCCESS: Boolean values correctly stored as boolean in bool_test3'
 
+- id: 152
+  name: 'Test MSSQL BIT to MySQL integer/varchar conversion'
+  run: |
+    sling run --debug -r cmd/sling/tests/replications/r.83.mssql_mysql_bool.yaml
+  output_contains:
+    - 'SUCCESS: BIT values correctly converted to integers in bool_testing_1'
+    - 'SUCCESS: BIT values correctly converted to strings in bool_testing_2'
+
 # # Test PostGIS (PostgreSQL) to GeoJSON as target with geometry column name "geom"
 # - id: 150
 #   name: Test PostGIS (PostgreSQL) to GeoJSON as target
