--- a/core/dbio/templates/mysql.yaml
+++ b/core/dbio/templates/mysql.yaml
@@ -377,6 +377,7 @@ function:
   replace: replace({string_expr}, {to_replace}, {replacement})
   str_utf8: '{ field }'
   cast_to_text: 'cast({field} as mediumtext)'
+  cast_to_integer: 'cast({field} as signed)'
   fill_cnt_field: count({field}) as cnt_{field}
   fill_rate_field: round(100.0 * count({field}) / count(*), 2) as prct_{field}
   sleep: select sleep({seconds})
